# ooptree

./: .copier-answers.yml  .coverage  README.md  coverage.lcov  pyproject.toml
.github/workflows/: _integration.yml
docs/source/: conf.py  index.rst
src/ooprtee/: __init__.py
src/ooptree/: __init__.py  __main__.py  class_finder.py  ooptree.py  ooptree_printer.py
